# experimental

./: README.md  autoinstall.yaml  gridwindow  jump  windowshufflerdaemon
NewWeatherShow/: README.md  meson.build
NewWeatherShow/po/: nl_NL.po
NewWeatherShow/src/: WeatherShow.vala  desktop_weather.vala  meson.build
QuickNoteII/: README.md  meson.build
QuickNoteII/icons/: meson.build
QuickNoteII/po/: budgie-quicknote.pot  nl_NL.po
QuickNoteII/schema/: org.ubuntubudgie.plugins.budgie-quicknote.gschema.xml
QuickNoteII/src/: BudgieQuickNote.plugin  budgie-quicknote.vala  meson.build
RecentlyUsed/: meson.build
RecentlyUsed/po/: budgie-recentlyused.pot
ShowTimeII/: meson.build
ShowTimeII/po/: meson.build  nl_NL.po  template.pot
ShowTimeII_under_construction/: ModernTimes.vala
ShowTimeII_under_construction/misc/: dateformats
WallStreet_test/: wallstreet-autostart.desktop  wallstreet-control.desktop  wallstreet.vala  wallstreet_control.vala
WeatherShowII_underconstruction/: <username>_weatherdata  README.md  desktop_weather.vala  weathertest1.vala
budgie-app-launcher/: README.md  meson.build
budgie-hello-world/: README.md  meson.build
budgie-hello-world/icons/: meson.build
budgie-hello-world/src/: HelloWorld.plugin  HelloWorldApplet.vala  meson.build
budgie-hello-world/src/budgie-hello-world/: HelloWorldApplet.plugin.in  HelloWorldApplet.vala  HelloWorldPlugin.vala  HelloWorldPopover.vala  meson.build
budgie-hello-world/src/widgets/: HelloWorldPopover.vala
budgie-trash/: README.md  meson.build
budgie-trash/po/: budgie-trash.pot
budgie-trash/src/: meson.build
budgie-trash/src/budgie-trash/: Dialog.py  Error.py  Log.py  Trash.plugin  Trash.py  TrashApplet.py  meson.build
budgie-trash/src/icons/: meson.build
center_all/: README.md  center_all.py
development_only/raven_templates/org.ubuntubudgie.experimental.demo/: README.md  meson.build  meson_post_install
development_only/raven_templates/org.ubuntubudgie.experimental.demo/schema/: org.ubuntubudgie.experimental.demo.gschema.xml
development_only/raven_templates/org.ubuntubudgie.experimental.demo/src/: demo-dropdown.vala  demo.plugin  demo.vala  meson.build
development_only/raven_templates/org.ubuntubudgie.experimental.pythonravenwidget/: README.md  meson.build
development_only/raven_templates/org.ubuntubudgie.experimental.pythonravenwidget/icons/: meson.build
development_only/raven_templates/org.ubuntubudgie.experimental.pythonravenwidget/schema/: org.ubuntubudgie.experimental.pythonravenwidget.gschema.xml
development_only/raven_templates/org.ubuntubudgie.experimental.pythonravenwidget/src/: PythonRavenWidget.plugin  meson.build  org_ubuntubudgie_experimental_pythonravenwidget.py
development_only/raven_templates/org.ubuntubudgie.experimental.template/: README.md  meson.build  meson_options.txt
development_only/raven_templates/org.ubuntubudgie.experimental.template/icons/: meson.build
development_only/raven_templates/org.ubuntubudgie.experimental.template/schemas/: meson.build  org.ubuntubudgie.experimental.template.gschema.xml
development_only/raven_templates/org.ubuntubudgie.experimental.template/src/: meson.build  template.vala
development_only/templates/org.ubuntubudgie.experimental.demo/src/: demo.plugin  demo.vala  meson.build
development_only/templates/org.ubuntubudgie.experimental.template/: README.md  meson.build
development_only/templates/org.ubuntubudgie.experimental.template/src/: meson.build  template.plugin
hotcornersII_final/: README.md  meson.build
hotcornersII_tests/: README.md  shared.vala
kangaroo/: Kangaroo.plugin  README.md  kangaroo.py
new_hotcorners_development/: README.md
new_screenshot_experiments/: README.md  aftershot.vala  budgie_screenshot.vala  budgie_screenshot_init.vala  combine_area_aftershot.vala  get_css_test.vala  mainwindow.vala  meson.build  org.buddiesofbudgie.screenshot.desktop.in  org.ubuntubudgie.screenshot.desktop  produce_name.vala  screenshot.gresource.xml  screenshot.vala  screenshot_areaselection.vala  screenshot_main.vala
new_screenshot_experiments/budgie-desktop/: README.md  patchfile
new_screenshot_experiments/schema/: org.buddiesofbudgie.screenshot.gschema.xml
new_screenshot_experiments/ui/: aftershot.ui  screenshothome.ui
new_shuffler_exploring_things/: getstrut.vala  getstrut2.vala  screendata.vala
newpreviews_test/: README.md  alttab_runner  alttab_runner.vala  alttab_runner_backup1.vala  meson.build  org.ubuntubudgie.plugins.budgie-wpreviews.gschema.xml  preview_allbackward.bde  preview_allforward.bde  preview_currentbackward.bde  preview_currentforward.bde  preview_triggers.vala  previews_creator.vala  previews_daemon.vala  triggermaster  triggermaster.vala
newpreviews_test/data/: meson.build  preview-creator-autostart.desktop.in  preview-daemon-autostart.desktop.in
newpreviews_test/misc/: previewscontrols.desktop
newpreviews_test/src/: meson.build  newpreviews_controls.vala  previews_controls.vala  previews_creator.vala  previews_daemon.vala
newshuffler_2/: get_distance  get_distance.vala  grid_all  grid_all.vala  gridwindow  gridwindow.vala  jump  jump.vala  remove_fromarrtest  remove_fromarrtest.vala  tile_active  tile_active.vala  tile_active_final.vala  tilecycletest  tilecycletest.vala  togglegui  togglegui.vala  windowshufflerdaemon  windowshufflerdaemon.vala
newvisual_workdirectory/tinyspaces/src/: TemplateApplet.vala  allspaces  allspaces.vala  auto_workspace  meson.build  visualspace.vala
nopreviews/: nopreviews
panelspace_example/: README.md  org.ubuntubudgie.plugins.toggle-desktop-icons.gschema.xml
rounded_popup_window_template/: rounded_window.vala
template/: README.md
tobedeleted/: pythonraven.tar
wallpaper_show/: wallpapertest.vala
weathershow/: BudgieWeatherShow.plugin  README.md  budgie_weathershow.py  colorpicker  getweather.py  weathershow  weathershow.py  weathershow_desktop  weathertools.py  wshow_panelrunner
window_shuffler/: README.md  matrix_wrapper  shortcuts  shuffler_demo.mkv  shuffler_geo.py  shuffler_tools.py  window_shuffler
(+161 files in other folders)
